# KYle-s-creation

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  py5_particle_demo.py  pytest.ini  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/api/: deps.py
backend/app/api/v1/: generation.py  health.py  routes.py
backend/app/core/: application.py  config.py  exceptions.py
backend/app/models/: request.py  response.py  scene.py
backend/app/services/: doubao_service.py  generation_pipeline.py  job_service.py  sketch_service.py  storage_service.py
backend/jiangshanqianli_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_application_factory.py  test_doubao_service.py  test_generation_api.py  test_generation_pipeline.py  test_health_api.py
config/: api_config.py
core/: __init__.py  ai_generate.py  ai_generator.py  ai_worker.py  api_config.py  brush_engine.py  drawing.py  hand_tracking.py  image_process.py  ink_brush.py  ink_field.py  paper.py  particle.py  particle_system_wrapper.py  reaction_diffusion.py  stroke.py
core/particle/: flow_field.py  image_sampler.py  particle.py  particle_system.py
docs/: api.md  architecture.md  foundation.md  performance.md  release.md  scenes.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: app.js  main.js  style.css
frontend/src/ui/: hud.js
scripts/: verify.ps1
tests/: test_brush_engine.py
ui/: __init__.py  canvas.py  main_window.py  particle_canvas.py  result_view.py
(+27 files in other folders)
